--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "animejs": "^3.2.1",
+    "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
+    "dotenv": "^8.2.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
